fixed cutoff top header icon

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
     background-color: aqua;
     grid-column: 2;
     display: grid;
-    grid-template-rows: 33% 67%;
+    grid-template-rows: 40% 60%;
   
 }
 
